fixed build errors